fixed when full org name clipped on another block

--- a/src/UI/app/Chat/section/Section.module.css
+++ b/src/UI/app/Chat/section/Section.module.css
@@ -89,7 +89,6 @@
         position: relative;
         white-space: normal;
         overflow: visible;
-        z-index: 100;
     }
 }
 
